# DHARA

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  logger.py  main.py  merge_json.py  pyproject.toml  rrl.py  run_local_inference.py  structure.txt  txt_to_json.py  web-scrapping.py
app/: main.py
app/api/: routes.py
app/core/: advanced_agent.py  agent.py  custom_retriever.py  custom_tools.py  logging_config.py
cleaned_text/: data_formatting.py
cleaned_text/cleaned_cases/: case100.json  case104.json  case108.json  case109.json  case110.json  case115.json  case120.json  case121.json  case127.json  case129.json  case13.json  case133.json  case134.json  case135.json  case137.json  case139.json  case142.json  case149.json  case15.json  case162.json  case163.json  case169.json  case170.json  case171.json  case172.json  case174.json  case179.json  case187.json  case19.json  case190.json  case192.json  case199.json  case200.json  case204.json  case205.json  case207.json  case21.json  case210.json  case213.json  case217.json  (+58 more)
config/: settings.py
json_files/: case1.json  case101.json  case103.json  case104.json  case109.json  case112.json  case115.json  case116.json  case118.json  case120.json  case122.json  case128.json  case129.json  case132.json  case137.json  case14.json  case144.json  case147.json  case150.json  case155.json  case156.json  case157.json  case16.json  case160.json  case164.json  case167.json  case168.json  case169.json  case17.json  case170.json  case173.json  case175.json  case179.json  case186.json  case188.json  case19.json  case195.json  case198.json  case201.json  case203.json  (+86 more)
merged_output/: merged_case1.json  merged_case100.json  merged_case101.json  merged_case104.json  merged_case105.json  merged_case111.json  merged_case117.json  merged_case118.json  merged_case12.json  merged_case124.json  merged_case13.json  merged_case137.json  merged_case140.json  merged_case144.json  merged_case146.json  merged_case15.json  merged_case155.json  merged_case16.json  merged_case163.json  merged_case164.json  merged_case166.json  merged_case167.json  merged_case174.json  merged_case18.json  merged_case184.json  merged_case187.json  merged_case192.json  merged_case194.json  merged_case196.json  merged_case20.json  merged_case201.json  merged_case203.json  merged_case207.json  merged_case208.json  merged_case217.json  merged_case220.json  merged_case225.json  merged_case229.json  merged_case237.json  merged_case238.json  (+52 more)
ner/: ner.ipynb  postprocessing.py
ner/ner_json_files/: case100_ner.json  case101_ner.json  case102_ner.json  case103_ner.json  case104_ner.json  case105_ner.json  case106_ner.json  case107_ner.json  case108_ner.json  case109_ner.json  case10_ner.json  case110_ner.json  case111_ner.json  case112_ner.json  case113_ner.json  case114_ner.json  case115_ner.json  case116_ner.json  case117_ner.json  case118_ner.json  case119_ner.json  case11_ner.json  case120_ner.json  case121_ner.json  case122_ner.json  case123_ner.json  case124_ner.json  case125_ner.json  case126_ner.json  case127_ner.json  case128_ner.json  case129_ner.json  case12_ner.json  case130_ner.json  case131_ner.json  case132_ner.json  case133_ner.json  case134_ner.json  case135_ner.json  case136_ner.json  (+345 more)
rrl/: rrl-kaggle.ipynb  rrl_colab.ipynb
rrl/rrl_json_files/: case1.json  case100.json  case101.json  case102.json  case103.json  case104.json  case105.json  case106.json  case107.json  case108.json  case109.json  case11.json  case110.json  case112.json  case114.json  case115.json  case116.json  case117.json  case118.json  case119.json  case12.json  case120.json  case123.json  case125.json  case126.json  case129.json  case13.json  case130.json  case131.json  case132.json  case133.json  case134.json  case135.json  case136.json  case137.json  case138.json  case139.json  (+309 more)
rrl_json_files/: case10.json  case111.json  case113.json  case121.json  case122.json  case124.json  case127.json  case128.json  case158.json  case160.json  case162.json  case163.json  case168.json  case17.json  case176.json  case177.json  case178.json  case190.json  case191.json  case201.json  case204.json  case208.json  case213.json  case22.json  case225.json  case227.json  case233.json  case25.json  case260.json  case289.json  case308.json  case327.json  case329.json  case332.json  case333.json  case35.json  case351.json  case354.json  case362.json  case369.json  (+14 more)
scripts/: build-and-run.sh  setup-aws-secrets.sh  setup-secrets.sh
src/: advanced_hybrid_retrieval.py  api_server.py  complete_rag_pipeline.py  context_aware_generation.py  data_models.py  embeddings.py  legal_bm25.py  legal_reranking.py  multi_faceted_search.py  rhetorical_chunking.py  vector_store.py
(+894 files in other folders)
