[project]
name = "dhara-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "selenium>=4.34.2",
]

[dependency-groups]
rrl = [
    "spacy>=3.2.2,<3.3.0",
    "pandas>1.2.4",
    "beautifulsoup4>=4.10.0",
    "torch>=1.12.1",
    "Levenshtein==0.23.0",
    "multiprocess==0.70.15",
    "spacy-transformers>=1.1.4,<1.2.0",
    "scikit-learn==1.3.2",
    "pytest==7.4.3",
    "prettytable>=3.1.1",
    "nltk>=3.6",
    "pytorch-transformers==1.2.0",
    "opennyai",
]
