[project]
name = "AgenticLegalRAG"
version = "0.1.0"
description = "Agentic Legal RAG System with Rhetorical Role Labeling and NER"
requires-python = ">=3.10"
authors = [
    {name = "Ansh Singhal", email = "anshsinghal3107@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
    "google-genai >= 1.33.0",
    
    # AI/ML Dependencies
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.0.40",
    "pinecone>=3.0.0",
    "google-generativeai>=0.3.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true